--- a/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
+++ b/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "source": [
     "## Lab 4 – Prediktiv Modell för Smart Home IoT\n",
-    "# Machine Learning med enklaste möjliga kod\n",
     "\n",
     "**Företag**: Smart Home Energy AB  \n",
     "**Mål**: Förutsäga energiförbrukning baserat på andra sensorer\n",
@@ -21,12 +20,13 @@
     "2. **Bygg modell** - Enkel Linear Regression\n",
     "3. **Träna modell** - Lär modellen från historisk data\n",
     "4. **Utvärdera** - Hur bra är modellen?\n",
-    "5. **Testa** - Gör prediktioner"
+    "5. **Testa** - Gör prediktioner\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "535cc91a",
    "metadata": {},
    "outputs": [
@@ -59,11 +59,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Bibliotek importerade!\n",
-      "Vi använder sklearn - världens enklaste ML-bibliotek\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# För machine learning\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     10\u001b[39m     confusion_matrix, roc_curve, auc,\n\u001b[32m     11\u001b[39m     precision_recall_curve\n\u001b[32m     12\u001b[39m )\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m precision_score, recall_score\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'seaborn'"
      ]
     }
    ],
@@ -74,9 +77,19 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# För machine learning\n",
+    "\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import (\n",
+    "    confusion_matrix, roc_curve, auc,\n",
+    "    precision_recall_curve\n",
+    ")\n",
+    "from sklearn.metrics import precision_score, recall_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
     "print(\" Bibliotek importerade!\")\n",
     "print(\"Vi använder sklearn - världens enklaste ML-bibliotek\")"
@@ -84,54 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "74e8c8b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " DATA LADDAD\n",
-      "============================================================\n",
-      "Antal rader: 17,700\n",
-      "Antal kolumner: 29\n",
-      "\n",
-      "Första 3 rader:\n",
-      "             Datum_Tid  Vitvaror_Energi_Wh  Belysning_Wh  Temp_Kök_C  \\\n",
-      "0  2016-01-11 17:00:00                60.0            30       19.89   \n",
-      "1  2016-01-11 17:10:00                60.0            30       19.89   \n",
-      "2  2016-01-11 17:20:00                50.0            30       19.89   \n",
-      "\n",
-      "   Fukt_Kök_Procent  Temp_Vardagsrum_C  Fukt_Vardagsrum_Procent  \\\n",
-      "0         47.596667               19.2                44.790000   \n",
-      "1         46.693333               19.2                44.722500   \n",
-      "2         46.300000               19.2                44.626667   \n",
-      "\n",
-      "   Temp_Tvättstuga_C  Fukt_Tvättstuga_Procent  Temp_Kontor_C  ...  \\\n",
-      "0              19.79                44.730000      19.000000  ...   \n",
-      "1              19.79                44.790000      19.000000  ...   \n",
-      "2              19.79                44.933333      18.926667  ...   \n",
-      "\n",
-      "   Temp_Föräldrarum_C  Fukt_Föräldrarum_Procent  Temp_Utomhus_Väderstation_C  \\\n",
-      "0           17.033333                     45.53                     6.600000   \n",
-      "1           17.066667                     45.56                     6.483333   \n",
-      "2           17.000000                     45.50                     6.366667   \n",
-      "\n",
-      "   Lufttryck_mmHg  Fukt_Utomhus_Väderstation_Procent  Vindhastighet_m_per_s  \\\n",
-      "0           733.5                               92.0               7.000000   \n",
-      "1           733.6                               92.0               6.666667   \n",
-      "2           733.7                               92.0               6.333333   \n",
-      "\n",
-      "     Sikt_km  Daggpunkt_C  Slump_Variabel_1  Slump_Variabel_2  \n",
-      "0  63.000000          5.3         13.275433         13.275433  \n",
-      "1  59.166667          5.2         18.606195         18.606195  \n",
-      "2  55.333333          5.1         28.642668         28.642668  \n",
-      "\n",
-      "[3 rows x 29 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# STEG 2: Läs in ren data\n",
     "data = pd.read_csv(\"../data/cleaned_raw_energydata.csv\")\n",
@@ -156,39 +125,15 @@
     "\n",
     "**Vad ska vi använda för att förutsäga?**  \n",
     "→ Temperatur, fuktighet, belysning (X = features)\n",
-    "\n",
-    "**Enkelt exempel:**\n",
-    "- Om kök är varmt → mer energi (kylskåp jobbar)\n",
-    "- Om belysning hög → mer energi (aktivitet)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f83a5d0d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " VÄLJ DATA FÖR MODELLEN\n",
-      "============================================================\n",
-      " Target (Y): Vitvaror_Energi_Wh\n",
-      "   → Detta ska modellen lära sig förutsäga\n",
-      "\n",
-      " Features (X): 4 kolumner\n",
-      "   1. Temp_Kök_C - Temperatur i köket\n",
-      "   2. Fukt_Kök_Procent - Fuktighet i köket\n",
-      "   3. Belysning_Wh - Belysning (indikerar aktivitet)\n",
-      "   4. Temp_Utomhus_Norr_C - Väder påverkar kylskåp\n",
-      "\n",
-      " Data shape:\n",
-      "   X: (17700, 4) (rader, kolumner)\n",
-      "   Y: (17700,) (rader)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# STEG 3: Välj features (X) och target (Y)\n",
     "\n",
@@ -216,6 +161,39 @@
     "print(f\"\\n Data shape:\")\n",
     "print(f\"   X: {X.shape} (rader, kolumner)\")\n",
     "print(f\"   Y: {Y.shape} (rader)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52c46a53",
+   "metadata": {},
+   "source": [
+    "### Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf222ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Skapa en kategori:\n",
+    "# 1 = hög temperatur\n",
+    "# 0 = låg temperatur\n",
+    "data[\"Hög_fukt_bad\"] = (data[\"Fukt_Badrum_Procent\"] > 60).astype(int)\n",
+    "\n",
+    "print(data[[\"Fukt_Badrum_Procent\", \"Hög_fukt_bad\"]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85008e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('cleaned_data_with_categories.csv', index=False)"
    ]
   },
   {
@@ -373,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🔄 FÖRSÖK 2: FÖRBÄTTRAD MODELL med TID-baserade features\n",
+    "# 🔄 FÖRSÖK 2:MODELL med TID-baserade features\n",
     "\n",
     "print(\"\\nBYGG EN BÄTTRE MODELL\")\n",
     "print(\"=\" * 60)\n",
@@ -381,21 +359,18 @@
     "# Lägg till tidsbaserade features\n",
     "data['Datum_Tid'] = pd.to_datetime(data['Datum_Tid'])\n",
     "data['Timme'] = data['Datum_Tid'].dt.hour\n",
-    "data['Dag_i_vecka'] = data['Datum_Tid'].dt.dayofweek  # 0=måndag, 6=söndag\n",
-    "data['Är_helg'] = (data['Dag_i_vecka'] >= 5).astype(int)  # 1=helg, 0=vardag\n",
+    "#data['Dag_i_vecka'] = data['Datum_Tid'].dt.dayofweek  # 0=måndag, 6=söndag\n",
+    "#data['Är_helg'] = (data['Dag_i_vecka'] >= 5).astype(int)  # 1=helg, 0=vardag\n",
     "\n",
     "# NYA features (logiska!)\n",
-    "X_bättre = data[['Timme', \n",
-    "                  'Dag_i_vecka',\n",
-    "                  'Är_helg',\n",
-    "                  ]]\n",
+    "X_bättre = data[['Timme']]\n",
     "\n",
     "Y_bättre = data['Vitvaror_Energi_Wh']\n",
     "\n",
     "print(\" NYA FEATURES (tid-baserade):\")\n",
     "print(\"   1. Timme (0-23) - När på dygnet?\")\n",
-    "print(\"   2. Dag_i_vecka (0-6) - Måndag till söndag\")\n",
-    "print(\"   3. Är_helg (0/1) - Olika beteende helg vs vardag\")\n",
+    "#print(\"   2. Dag_i_vecka (0-6) - Måndag till söndag\")\n",
+    "#print(\"   3. Är_helg (0/1) - Olika beteende helg vs vardag\")\n",
     "\n",
     "\n",
     "# Dela och träna\n",
@@ -436,13 +411,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ny_data = [[12, 2, 0]]  # Exempel: kl 12 på en tisdag (vardag) med 300 Wh belysning\n",
+    "ny_data = [[12]]  # Exempel: kl 12 på en tisdag (vardag) med 300 Wh belysning\n",
     "prediktion_ny = modell2.predict(ny_data)\n",
     "print(f\"\\nEXEMPEL PÅ NY PREDIKTION MED TID-BASERADE FEATURES:\")\n",
-    "print(f\" Vid kl 12 på en tisdag (vardag) med 300 Wh belysning:\")\n",
+    "print(f\" Vid kl 12 :\")\n",
     "print(f\"  Predikterad Vitvaror_Energi_Wh: {prediktion_ny[0]:.0f} Wh\")\n",
+    "mean_timme_12 = data[data['Timme'] == 12]['Vitvaror_Energi_Wh'].mean()\n",
+    "print(f\"  Medel energi kl 12: {mean_timme_12:.1f} Wh\")\n",
     "max_vitvaror = data['Vitvaror_Energi_Wh'].max()\n",
     "print(f\"  Max Vitvaror_Energi_Wh i datasetet: {max_vitvaror:.0f} Wh\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a2f63ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(Y_test2, Y_pred2, alpha=0.5)\n",
+    "plt.plot([Y_test.min(), Y_test.max()], [Y_test.min(), Y_test.max()], 'r--')\n",
+    "plt.xlabel('Verklig energi (Wh)')\n",
+    "plt.ylabel('Predikterad energi (Wh)')\n",
+    "plt.title('Verklig vs Predikterad Energi')\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   },
   {
@@ -451,8 +445,6 @@
    "metadata": {},
    "source": [
     "###  PROBLEM: Modellen är DÅLIG!\n",
-    "\n",
-    "**Förklaring för studenter:**\n",
     "\n",
     "Vi ser att R² är mycket låg (~0.08) = modellen förklarar bara 8% av variationen!\n",
     "\n",
@@ -481,8 +473,15 @@
     "\n",
     "3. **Tänk logiskt INNAN du väljer features**  \n",
     "   Fråga: \"Vad PÅVERKAR egentligen det jag vill förutsäga?\"\n",
-    "\n",
-    "Låt oss testa en BÄTTRE modell med tid-baserade features! →"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9f70ed9",
+   "metadata": {},
+   "source": [
+    "### Linjär regression"
    ]
   },
   {
@@ -520,6 +519,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e7c0a2d",
+   "metadata": {},
+   "source": [
+    "### Random forest regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa73d78b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_reg = RandomForestRegressor(\n",
+    "    n_estimators=200,\n",
+    "    random_state=42\n",
+    ")\n",
+    "rf_reg.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf_reg = rf_reg.predict(X_test)\n",
+    "\n",
+    "print(\"\\nRandom Forest Regression\")\n",
+    "print(\"R2:\", r2_score(y_test, y_pred_rf_reg))\n",
+    "#print(\"RMSE:\", mean_squared_error(y_test, y_pred_rf_reg, squared=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f266513f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.scatter(y_test, y_pred_rf_reg, alpha=0.5)\n",
+    "plt.plot([y_test.min(), y_test.max()],\n",
+    "         [y_test.min(), y_test.max()],\n",
+    "         linestyle=\"--\")\n",
+    "plt.xlabel(\"Sant värde (Fukt_Badrum_Procent)\")\n",
+    "plt.ylabel(\"Prediktion (Random Forest)\")\n",
+    "plt.title(\"True vs Pred – Random Forest\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8c3ed5e1",
@@ -534,6 +579,14 @@
     "plt.title('Verklig vs Predikterad Energi')\n",
     "plt.grid()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d02e17b",
+   "metadata": {},
+   "source": [
+    "### Linjär regression"
    ]
   },
   {
@@ -580,6 +633,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7c582d2a",
+   "metadata": {},
+   "source": [
+    "### Random forest regression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8c7633f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_reg = RandomForestRegressor(\n",
+    "    n_estimators=200,\n",
+    "    random_state=42\n",
+    ")\n",
+    "rf_reg.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf_reg = rf_reg.predict(X_test)\n",
+    "\n",
+    "print(\"\\nRandom Forest Regression\")\n",
+    "print(\"R2:\", r2_score(y_test, y_pred_rf_reg))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3210ef69",
@@ -600,6 +680,176 @@
     "\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23aaf77b",
+   "metadata": {},
+   "source": [
+    "### Klassificering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd552be1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Skapa en kategori:\n",
+    "# 1 = hög temperatur\n",
+    "# 0 = låg temperatur\n",
+    "data[\"Hög_fukt_bad\"] = (data[\"Fukt_Badrum_Procent\"] > 60).astype(int)\n",
+    "\n",
+    "print(data[[\"Fukt_Badrum_Procent\", \"Hög_fukt_bad\"]].head(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c9d0c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_clf =data[[\n",
+    "    'Temp_Badrum_C','Temp_Utomhus_Väderstation_C',]]\n",
+    "y_clf = data[['Hög_fukt_bad']]\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    x_clf, y_clf, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86a19a4c",
+   "metadata": {},
+   "source": [
+    "### Logistik regression (klassificering)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e47d5211",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_reg = LogisticRegression(\n",
+    "    class_weight='balanced',\n",
+    "    max_iter=1000,\n",
+    "    solver=\"liblinear\"   \n",
+    ")\n",
+    "log_reg.fit(X_train, Y_train)\n",
+    "\n",
+    "y_pred_log = log_reg.predict(X_test)\n",
+    "\n",
+    "print(\"\\nLogistisk regression\")\n",
+    "print(\"Accuracy:\", accuracy_score(Y_test, y_pred_log))\n",
+    "\n",
+    "precision = precision_score(Y_test, y_pred_log)\n",
+    "recall = recall_score(Y_test, y_pred_log)\n",
+    "\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87c3ecf7",
+   "metadata": {},
+   "source": [
+    "PRECISION (Hur ofta modellen har rätt när den säger JA)\n",
+    "\n",
+    "RECALL (Hur många riktiga 1:or modellen lyckas hitta)\n",
+    "\n",
+    "PRECISION\n",
+    "\n",
+    "“När modellen säger JA – hur ofta har den rätt?”\n",
+    "\n",
+    "RECALL\n",
+    "\n",
+    "“Av alla riktiga JA – hur många hittar modellen?”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f170bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm_log = confusion_matrix(Y_test, y_pred_log)\n",
+    "\n",
+    "sns.heatmap(cm_log, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
+    "plt.title(\"Confusion Matrix – Logistic Regression\")\n",
+    "plt.xlabel(\"Prediktion\")\n",
+    "plt.ylabel(\"Sant värde\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4849c5b4",
+   "metadata": {},
+   "source": [
+    "### Random forest classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8cb989e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_clf = RandomForestClassifier(\n",
+    "    n_estimators=200,\n",
+    "    random_state=42\n",
+    ")\n",
+    "rf_clf.fit(X_train, Y_train)\n",
+    "\n",
+    "y_pred_rf_clf = rf_clf.predict(X_test)\n",
+    "\n",
+    "print(\"\\nRandom Forest Classifier\")\n",
+    "print(\"Accuracy:\", accuracy_score(Y_test, y_pred_rf_clf))\n",
+    "precision = precision_score(Y_test, y_pred_rf_clf)\n",
+    "recall = recall_score(Y_test, y_pred_rf_clf)\n",
+    "\n",
+    "print(\"Precision:\", precision)\n",
+    "print(\"Recall:\", recall)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad46cceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm_rf = confusion_matrix(Y_test, y_pred_rf_clf)\n",
+    "\n",
+    "sns.heatmap(cm_rf, annot=True, fmt=\"d\", cmap=\"Greens\")\n",
+    "plt.title(\"Confusion Matrix – Random Forest\")\n",
+    "plt.xlabel(\"Prediktion\")\n",
+    "plt.ylabel(\"Sant värde\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0efcf2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "importances = rf_clf.feature_importances_\n",
+    "features = x_clf.columns\n",
+    "\n",
+    "df = pd.DataFrame({'Feature': features, 'Importance': importances})\n",
+    "print(df.sort_values('Importance', ascending=False))"
    ]
   },
   {
