--- a/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
+++ b/lab4-prediktiv-modell/Lab4-Prediktiv-Modell.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "535cc91a",
    "metadata": {},
    "outputs": [
@@ -34,11 +34,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: scikit-learn in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (1.7.2)\n",
-      "Requirement already satisfied: numpy>=1.22.0 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from scikit-learn) (2.3.5)\n",
-      "Requirement already satisfied: scipy>=1.8.0 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from scikit-learn) (1.16.3)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from scikit-learn) (1.5.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from scikit-learn) (3.6.0)\n",
+      "Collecting seaborn\n",
+      "  Downloading seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from seaborn) (2.3.5)\n",
+      "Requirement already satisfied: pandas>=1.2 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from seaborn) (2.3.3)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from seaborn) (3.10.7)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.61.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (12.0.0)\n",
+      "Requirement already satisfied: pyparsing>=3 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.17.0)\n",
+      "Downloading seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
+      "Installing collected packages: seaborn\n",
+      "Successfully installed seaborn-0.13.2\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "✅ scikit-learn installerad!\n"
      ]
@@ -47,26 +61,23 @@
    "source": [
     "# STEG 0: Installera sklearn (scikit-learn)\n",
     "# Kör denna cell FÖRST!\n",
-    "%pip install scikit-learn\n",
+    "%pip install seaborn\n",
     "\n",
     "print(\"✅ scikit-learn installerad!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "0b578d2d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# För machine learning\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     10\u001b[39m     confusion_matrix, roc_curve, auc,\n\u001b[32m     11\u001b[39m     precision_recall_curve\n\u001b[32m     12\u001b[39m )\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m precision_score, recall_score\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'seaborn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Bibliotek importerade!\n",
+      "Vi använder sklearn - världens enklaste ML-bibliotek\n"
      ]
     }
    ],
@@ -97,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "74e8c8b5",
    "metadata": {},
    "outputs": [
@@ -174,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "f83a5d0d",
    "metadata": {},
    "outputs": [
@@ -281,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "85008e3c",
    "metadata": {},
    "outputs": [],
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "047cce17",
    "metadata": {},
    "outputs": [
@@ -301,18 +312,15 @@
      "text": [
       "\n",
       " DELA DATA: TRÄNING vs TEST\n",
-      "============================================================\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'train_test_split' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m60\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# 80% träning, 20% test\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m X_train, X_test, Y_train, Y_test = \u001b[43mtrain_test_split\u001b[49m(\n\u001b[32m      8\u001b[39m     X, Y, test_size=\u001b[32m0.2\u001b[39m, random_state=\u001b[32m42\u001b[39m\n\u001b[32m      9\u001b[39m )\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m Data uppdelad:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m   Träningsdata: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(X_train)\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m,\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m rader (80%)\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'train_test_split' is not defined"
+      "============================================================\n",
+      " Data uppdelad:\n",
+      "   Träningsdata: 14,160 rader (80%)\n",
+      "   Testdata: 3,540 rader (20%)\n",
+      "\n",
+      " Varför dela?\n",
+      "   • Träna modellen på 80%\n",
+      "   • Testa på 20% (data modellen aldrig sett)\n",
+      "   • Detta visar hur bra modellen fungerar på ny data\n"
      ]
     }
    ],
@@ -356,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "6fad55be",
    "metadata": {},
    "outputs": [
@@ -366,18 +374,11 @@
      "text": [
       "\n",
       " BYGG MODELLEN\n",
-      "============================================================\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'LinearRegression' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m60\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# Skapa modellen (1 rad kod!)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m modell = \u001b[43mLinearRegression\u001b[49m()\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m Modell skapad: Linear Regression\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Träna modellen (1 rad kod!)\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'LinearRegression' is not defined"
+      "============================================================\n",
+      " Modell skapad: Linear Regression\n",
+      "\n",
+      " Tränar modellen...\n",
+      " Träning klar!\n"
      ]
     }
    ],
@@ -399,10 +400,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0f9c37ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " TESTA MODELLEN\n",
+      "============================================================\n",
+      " Modellen har gjort 3,540 prediktioner!\n",
+      "\n",
+      " EXEMPEL PÅ PREDIKTIONER:\n",
+      "      Verklig energi |   Predikterad energi |   Skillnad\n",
+      "------------------------------------------------------------\n",
+      "              120 Wh |                48 Wh |      72 Wh\n",
+      "              150 Wh |                86 Wh |      64 Wh\n",
+      "               70 Wh |                61 Wh |       9 Wh\n",
+      "               90 Wh |                76 Wh |      14 Wh\n",
+      "               70 Wh |                84 Wh |      14 Wh\n"
+     ]
+    }
+   ],
    "source": [
     "# STEG 6: Testa modellen (gör prediktioner)\n",
     "\n",
@@ -428,10 +449,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "958e9064",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " HUR BRA ÄR MODELLEN?\n",
+      "============================================================\n",
+      "1️ MAE (Mean Absolute Error): 20.9 Wh\n",
+      "   → Genomsnittligt fel: 20.9 Wh\n",
+      "   → Modellen missar i snitt med 20.9 Wh\n",
+      "\n",
+      "2️ R² Score: 0.167\n",
+      "   → Hur bra modellen förklarar variationen\n",
+      "   →  DÅLIG. Modellen förklarar bara 16.7%\n",
+      "\n",
+      " PERSPEKTIV:\n",
+      "   Genomsnittlig energi: 68 Wh\n",
+      "   Felmarginal: 21 Wh (30.6% av medel)\n"
+     ]
+    }
+   ],
    "source": [
     "# STEG 7: Utvärdera modellen\n",
     "\n",
@@ -481,10 +523,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c1b1fa9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "BYGG EN BÄTTRE MODELL\n",
+      "============================================================\n",
+      " NYA FEATURES (tid-baserade):\n",
+      "   1. Timme (0-23) - När på dygnet?\n",
+      "\n",
+      " RESULTAT-JÄMFÖRELSE:\n",
+      "Metrik               |   Gammal (temp/fukt) |     NY (tid-baserad)\n",
+      "----------------------------------------------------------------------\n",
+      "R² Score             |                0.167 |                0.165\n",
+      "MAE (fel i Wh)       |                 20.9 |                 20.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 🔄 FÖRSÖK 2:MODELL med TID-baserade features\n",
     "\n",
@@ -541,19 +601,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "b00dbf8d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'modell2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m ny_data = [[\u001b[32m12\u001b[39m]]  \u001b[38;5;66;03m# Exempel: kl 12 på en tisdag (vardag) med 300 Wh belysning\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m prediktion_ny = \u001b[43mmodell2\u001b[49m.predict(ny_data)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mEXEMPEL PÅ NY PREDIKTION MED TID-BASERADE FEATURES:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m Vid kl 12 :\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'modell2' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "EXEMPEL PÅ NY PREDIKTION MED TID-BASERADE FEATURES:\n",
+      " Vid kl 12 :\n",
+      "  Predikterad Vitvaror_Energi_Wh: 70 Wh\n",
+      "  Medel energi kl 12: 76.2 Wh\n",
+      "  Max Vitvaror_Energi_Wh i datasetet: 190 Wh\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/regissoren/Documents/big-data-iot-labs-1/.venv/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
