--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "87d5594f",
    "metadata": {},
    "outputs": [
@@ -46,6 +46,8 @@
     "\n",
     "# TODO: Ladda in data från CSV-fil\n",
     "df = pd.read_csv(\"../data/Test.csv\")\n",
+    "\n",
+    "#Hej från FIlimon\n",
     "\n",
     "\n",
     "# TODO: Visa första 5 raderna\n",
