--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5ad52935",
    "metadata": {},
    "outputs": [
@@ -155,14 +155,13 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.duplicated().sum()\n",
-    "df = df.drop_duplicates()"
+    "df.duplicated().sum()\n"
    ]
   },
   {
