--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -467,7 +467,7 @@
     "\n",
     "plt.xlabel(\"Temperature\")\n",
     "plt.ylabel(\"Air Pollution Index\")\n",
-    "plt.title(\"Temperature vs Air Pollution Index\")\n",
+    "plt.title(\"Temperature vs Air Pollution iiIndex\")\n",
     "plt.show()\n",
     "\n"
    ]
