--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -720,7 +720,7 @@
    "id": "0f7209ba",
    "metadata": {},
    "source": [
-    "I garffen ser vi inget samband mellan temperaturen och luftföroreningar, i olika temperatursnivå så förekommer både höga och löga luftföroreningar, som gör att temperaturen har inga starkt påverkan av luftföroreningsnivåerna."
+    "I graffarna ser vi inget samband mellan temperaturen och luftföroreningar, i olika temperatursnivå så förekommer både höga och löga luftföroreningar, som gör att temperaturen har inga starkt påverkan av luftföroreningsnivåerna."
    ]
   },
   {
