--- a/mini-projekt/Mohamed.Filimon.ipynb
+++ b/mini-projekt/Mohamed.Filimon.ipynb
@@ -12,13 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "87d5594f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Importera pandas\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# TODO: Ladda in data från CSV-fil\n",
     "df = pd.read_csv(\"../data/Test.csv\")\n",
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "acf48e27",
    "metadata": {},
    "outputs": [
@@ -77,133 +79,151 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-05-18 00:00:00</td>\n",
+       "      <th>14449</th>\n",
+       "      <td>2018-09-30 19:00:00</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>73</td>\n",
-       "      <td>63</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
+       "      <td>176</td>\n",
+       "      <td>21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>345</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>285.15</td>\n",
+       "      <td>283.45</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Rain</td>\n",
-       "      <td>moderate rain</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-05-18 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>251</td>\n",
-       "      <td>63</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>285.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Mist</td>\n",
-       "      <td>mist</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-05-18 00:00:00</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>75</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>285.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Drizzle</td>\n",
-       "      <td>light intensity drizzle</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>broken clouds</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-05-18 01:00:00</td>\n",
+       "      <th>14450</th>\n",
+       "      <td>2018-09-30 20:00:00</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>98</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>351</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>284.79</td>\n",
+       "      <td>214</td>\n",
+       "      <td>95</td>\n",
+       "      <td>8</td>\n",
+       "      <td>280</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>282.76</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>90</td>\n",
-       "      <td>Rain</td>\n",
-       "      <td>heavy intensity rain</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-05-18 01:00:00</td>\n",
+       "      <th>14451</th>\n",
+       "      <td>2018-09-30 21:00:00</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>283</td>\n",
-       "      <td>56</td>\n",
+       "      <td>173</td>\n",
+       "      <td>63</td>\n",
+       "      <td>4</td>\n",
+       "      <td>238</td>\n",
        "      <td>1</td>\n",
-       "      <td>351</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>284.79</td>\n",
+       "      <td>282.73</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>90</td>\n",
-       "      <td>Mist</td>\n",
-       "      <td>mist</td>\n",
+       "      <td>Thunderstorm</td>\n",
+       "      <td>proximity thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14452</th>\n",
+       "      <td>2018-09-30 22:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21</td>\n",
+       "      <td>57</td>\n",
+       "      <td>8</td>\n",
+       "      <td>268</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>282.09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14453</th>\n",
+       "      <td>2018-09-30 23:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>116</td>\n",
+       "      <td>70</td>\n",
+       "      <td>8</td>\n",
+       "      <td>328</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>282.12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Clouds</td>\n",
+       "      <td>overcast clouds</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             date_time is_holiday  air_pollution_index  humidity  wind_speed  \\\n",
-       "0  2017-05-18 00:00:00        NaN                   73        63           1   \n",
-       "1  2017-05-18 00:00:00        NaN                  251        63           1   \n",
-       "2  2017-05-18 00:00:00        NaN                   75        56           1   \n",
-       "3  2017-05-18 01:00:00        NaN                   98        56           1   \n",
-       "4  2017-05-18 01:00:00        NaN                  283        56           1   \n",
+       "                 date_time is_holiday  air_pollution_index  humidity  \\\n",
+       "14449  2018-09-30 19:00:00        NaN                  176        21   \n",
+       "14450  2018-09-30 20:00:00        NaN                  214        95   \n",
+       "14451  2018-09-30 21:00:00        NaN                  173        63   \n",
+       "14452  2018-09-30 22:00:00        NaN                   21        57   \n",
+       "14453  2018-09-30 23:00:00        NaN                  116        70   \n",
        "\n",
-       "   wind_direction  visibility_in_miles  dew_point  temperature  rain_p_h  \\\n",
-       "0              27                    4          4       285.15       0.0   \n",
-       "1              27                    4          4       285.15       0.0   \n",
-       "2               0                    1          1       285.15       0.0   \n",
-       "3             351                    2          2       284.79       0.0   \n",
-       "4             351                    1          1       284.79       0.0   \n",
+       "       wind_speed  wind_direction  visibility_in_miles  dew_point  \\\n",
+       "14449           4             345                    4          4   \n",
+       "14450           8             280                    6          6   \n",
+       "14451           4             238                    1          1   \n",
+       "14452           8             268                    7          7   \n",
+       "14453           8             328                    6          6   \n",
        "\n",
-       "   snow_p_h  clouds_all weather_type      weather_description  \n",
-       "0         0          90         Rain            moderate rain  \n",
-       "1         0          90         Mist                     mist  \n",
-       "2         0          90      Drizzle  light intensity drizzle  \n",
-       "3         0          90         Rain     heavy intensity rain  \n",
-       "4         0          90         Mist                     mist  "
+       "       temperature  rain_p_h  snow_p_h  clouds_all  weather_type  \\\n",
+       "14449       283.45       0.0         0          75        Clouds   \n",
+       "14450       282.76       0.0         0          90        Clouds   \n",
+       "14451       282.73       0.0         0          90  Thunderstorm   \n",
+       "14452       282.09       0.0         0          90        Clouds   \n",
+       "14453       282.12       0.0         0          90        Clouds   \n",
+       "\n",
+       "          weather_description  \n",
+       "14449           broken clouds  \n",
+       "14450         overcast clouds  \n",
+       "14451  proximity thunderstorm  \n",
+       "14452         overcast clouds  \n",
+       "14453         overcast clouds  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# TODO: Visa första 5 raderna\n",
-    "df.head()"
+    "df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e90e1bcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14454, 14)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: Visa antal rader och kolumner\n",
     "df.shape"
