--- a/mini-projekt/Mini_Projekt_Mall.ipynb
+++ b/mini-projekt/Mini_Projekt_Mall.ipynb
@@ -252,13 +252,17 @@
    "id": "73a15708",
    "metadata": {},
    "source": [
-    "**Resultat**: \n",
+    "**Resultat om ni har regression modell**: \n",
     "- R² Score: [Ditt värde här]\n",
     "- MAE: [Ditt värde här]\n",
     "\n",
-    "**Diskussion**: [Är modellen bra eller dålig? Varför? 3-5 meningar]\n",
     "\n",
-    "---"
+    "\n",
+    "**Resultat om ni har klassificering modell**: \n",
+    "- Precision: [Ditt värde här]\n",
+    "- Recall: [Ditt värde här]\n",
+    "\n",
+    "**Diskussion**: [Är modellen bra eller dålig? Varför? 3-5 meningar]"
    ]
   },
   {
